<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_items"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="50dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/card_view_name"
            android:maxLines="1"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:layout_alignLeft="@+id/desc_text"
            android:layout_alignStart="@+id/desc_text" />
        <TextView
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/card_view_desc"
            android:maxLines="1"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_below="@+id/name_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="97dp"
            android:layout_marginRight="97dp"
            android:text="@string/date_time_text"
            android:textSize="12sp" />
    </RelativeLayout>


</android.support.v7.widget.CardView>