<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/to_do"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1.55"
            android:gravity="center"
            android:hint="@string/name"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick ="onClickCheckbox"
            android:text="@string/done_check_box" />
    </LinearLayout>
    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="408dp"
        android:gravity="start"
        android:hint="@string/description"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        tools:ignore="ExtraText">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/floatingActionButton2"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_toLeftOf="@+id/floatingActionButton4"
            android:layout_toStartOf="@+id/floatingActionButton4"
            android:onClick="calenderOnClick"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:fabSize="normal"
            app:rippleColor="#FDFDFD" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/floatingActionButton3"
            android:layout_alignEnd="@+id/date_time_cal"
            android:layout_alignRight="@+id/date_time_cal"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:onClick="timeOnClick"
            android:src="@android:drawable/btn_star"
            app:fabSize="normal"
            app:rippleColor="#FDFDFD" />


        <TextView
            android:id="@+id/date_time_cal"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="21dp"
            android:text="@string/calender"
            android:textSize="16sp" />

            

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/date_time_cal"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_toEndOf="@+id/date_time_cal"
            android:layout_toRightOf="@+id/date_time_cal"
            android:onClick="updateOnClick"
            android:src="@android:drawable/ic_menu_save"
            app:fabSize="normal"
            app:rippleColor="#FDFDFD" />
            

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteOnClick"
            android:src="@android:drawable/ic_delete"
            app:fabSize="normal"
            app:rippleColor="#FDFDFD"
            android:layout_alignTop="@+id/floatingActionButton2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>